@@ -60,8 +60,8 @@ class ReportControllerTest {
     long reportUid = 1L;
     long dataSourceUid = 2L;
 
-    Filter.Expr.Clause clause1 = new Filter.Expr.Clause("state_cd", "EQ", "47");
-    Filter.Expr.Clause clause2 = new Filter.Expr.Clause("cnty_cd", "EQ", "35001");
+    Filter.Expr.Clause clause1 = new Filter.Expr.Clause(27L, "EQ", "47");
+    Filter.Expr.Clause clause2 = new Filter.Expr.Clause(31L, "EQ", "35001");
     Filter.Expr.Connector connector = new Filter.Expr.Connector("OR", clause1, clause2);
     Filter.AdvancedFilter advancedFilter = new Filter.AdvancedFilter(false, connector);
 
@@ -70,7 +70,7 @@ class ReportControllerTest {
             reportUid,
             dataSourceUid,
             true,
-            Arrays.asList("state_cd", "cnty_cd"),
+            Arrays.asList(27L, 31L),
             List.of(advancedFilter));
 
     when(service.executeReport(request))
@@ -92,8 +92,8 @@ class ReportControllerTest {
             reportUid,
             dataSourceUid,
             true,
-            Arrays.asList("state_cd", "cnty_cd"),
-            List.of(new Filter.BasicFilter(true, "10066724", List.of("35001"))));
+            Arrays.asList(27L, 31L),
+            List.of(new Filter.BasicFilter(true, 10066724L, List.of("35001"))));
 
     when(service.executeReport(request)).thenThrow(new NotFoundException(errorMsg));
 
@@ -113,8 +113,8 @@ class ReportControllerTest {
             reportUid,
             dataSourceUid,
             true,
-            Arrays.asList("state_cd", "cnty_cd"),
-            List.of(new Filter.BasicFilter(true, "10066724", List.of("35001"))));
+            Arrays.asList(27L, 31L),
+            List.of(new Filter.BasicFilter(true, 10066724L, List.of("35001"))));
 
     when(service.executeReport(request)).thenThrow(new NotImplementedException(errorMsg));
 
